objects/SMAX_PS_IntegrationError__c.object
<CustomObject>
    <label>Integration Error</label>
    <nameField>
        <displayFormat>IE-{0000000000}</displayFormat>
        <label>Integration Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SMAX_PS_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Integration Errors</relationshipLabel>
        <relationshipName>Integration_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Integration Errors</relationshipLabel>
        <relationshipName>Integration_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>SVMXC__Proforma_Invoice__c</referenceTo>
        <relationshipLabel>Integration Errors</relationshipLabel>
        <relationshipName>Integration_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_WorkOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Integration Errors</relationshipLabel>
        <relationshipName>Integration_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PartsOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Parts Order</description>
        <inlineHelpText>Lookup to Parts Order</inlineHelpText>
        <label>Parts Order</label>
        <referenceTo>SVMXC__RMA_Shipment_Order__c</referenceTo>
        <relationshipLabel>Integration Errors</relationshipLabel>
        <relationshipName>Integration_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_WorkDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Detail</label>
        <referenceTo>SVMXC__Service_Order_Line__c</referenceTo>
        <relationshipLabel>Integration Errors</relationshipLabel>
        <relationshipName>Integration_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_StockTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Transfer</label>
        <referenceTo>SVMXC__Stock_Transfer__c</referenceTo>
        <relationshipLabel>Integration Errors</relationshipLabel>
        <relationshipName>Integration_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_InventoryCount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Count</label>
        <referenceTo>SMAX_PS_InventoryCount__c</referenceTo>
        <relationshipLabel>Integration Errors</relationshipLabel>
        <relationshipName>Integration_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ServiceContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Integration Errors</relationshipLabel>
        <relationshipName>Integration_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_RelatedElementType__c</fullName>
        <description>Type of Identifier value for the related element, used for filling in a Lookup field.</description>
        <inlineHelpText>Type of Identifier value for the related element, used for filling in a Lookup field.</inlineHelpText>
        <label>Related Element Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WorkOrderId</fullName>
                </value>
                <value>
                    <fullName>ServiceOrderNumber</fullName>
                </value>
                <value>
                    <fullName>WorkDetailId</fullName>
                </value>
                <value>
                    <fullName>PartsOrderId</fullName>
                </value>
                <value>
                    <fullName>PartsOrderNumber</fullName>
                </value>
                <value>
                    <fullName>StockTransferId</fullName>
                </value>
                <value>
                    <fullName>ContactId</fullName>
                </value>
                <value>
                    <fullName>ContactNumber</fullName>
                </value>
                <value>
                    <fullName>InventoryCountId</fullName>
                </value>
                <value>
                    <fullName>InvoiceId</fullName>
                </value>
                <value>
                    <fullName>InvoiceNumber</fullName>
                </value>
                <value>
                    <fullName>CaseId</fullName>
                </value>
                <value>
                    <fullName>ServiceContractId</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_My_Integration_Errors__c</fullName>
        <description>My integration errors indicator used for download criteria.</description>
        <formula>IF($User.Id=SMAX_PS_WorkOrder__r.SVMXC__Group_Member__r.SVMXC__Salesforce_User__r.Id, TRUE, FALSE) ||
IF($User.Id=SMAX_PS_WorkDetail__r.CreatedById, TRUE, FALSE) ||
IF($User.Id=SMAX_PS_PartsOrder__r.CreatedById, TRUE, FALSE)</formula>
        <label>My Integration Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_RelatedElementIdentifier__c</fullName>
        <description>Identifier value for the related element, used for filling in a Lookup field.</description>
        <inlineHelpText>Identifier value for the related element, used for filling in a Lookup field.</inlineHelpText>
        <label>Related Element Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>